[package]
name = "Lattice"
version = "0.1.20"
authors = ["Andrew <andrew@subarctic.org>"]
description = "A third generation window manager for FRP in Rust"
keywords = ["windowing", "graphics", "api", "functional"]
categories = ["rendering","games","api-bindings","game-engines","multimedia"]
license = "MIT"

[dependencies]
sdl2 = "0.30"
image = "0.13"
glob = "0.2"
