[package]
name = "Lattice"
version = "0.2.0"
authors = ["Andrew <andrew@subarctic.org>"]
description = "A third generation window manager for FRP in Rust"
repository = "https://github.com/andrew-lucker/Lattice"
documentation = "https://github.com/andrew-lucker/Lattice"
keywords = ["windowing", "graphics", "api", "functional"]
categories = ["rendering","games","api-bindings","game-engines","multimedia"]
license = "MIT"

[dependencies]
sdl2 = "0.30"
image = "0.13"
glob = "0.2"
rusttype = "0.2"
arrayvec = "0.3"
unicode-normalization = "0.1"
