[package]
name = "Lattice"
version = "0.3.17"
authors = ["Andrew <andrew@subarctic.org>"]
description = "A Simple Window Manager for Functional Reactive Programming in Rust"
repository = "https://github.com/andrew-lucker/Lattice"
documentation = "https://docs.rs/Lattice/"
keywords = ["windowing", "graphics", "api", "functional"]
categories = ["rendering","games","api-bindings","game-engines","multimedia"]
license = "MIT"

[dependencies]
time = "0.1"
sdl2 = "0.30"
image = "0.13"
glob = "0.2"
rusttype = "0.2"
unicode-normalization = "0.1"
lazy_static = "0.2"

